2007-11-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Nereid/Nereid/PlayerInterface.cs: Connect the RowActivated
	event on the track view to the PlayerEngineService to get the first
	working playback in the new banshee

	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryTrackInfo.cs:
	Set CanPlay, since ... it can

	* src/Core/Banshee.Services/Banshee.ServiceStack/ServiceManager.cs: Provide
	a property for accessing the PlayerEngineService

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView.cs: Fix design of RowActivted

2007-11-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	Ported the old PlayerEngineCore to be a service and to load its engines
	from Mono.Addins

	* src/Core/Banshee.Services/Banshee.ServiceStack/ServiceManager.cs: Make
	PlayerEngineService a built-in service

	* src/Core/Banshee.Services/Banshee.ServiceStack/ServiceStartedHandler.cs:
	Updated delegate signature since ServiceManager is now static

	* src/Core/Banshee.Core/Banshee.Base/Log.cs: Add some more overrides

	* src/Backends/Banshee.GStreamer/Banshee.GStreamer/PlayerEngine.cs: Defer
	the loading of the player engine internals until we get a notification
	from ServiceManager that the GStreamerCoreService has been loaded

2007-11-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Core/Banshee.Base/Log.cs: Added a new, extremely simple
	and much more efficient logging facility

	* src/Core/Banshee.Base/LogCore.cs: Removed legacy logging facility

2007-11-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView.cs: Add RowActivated event.

2007-11-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.Services.addin.xml: Define an extension
	point for registering services

	* src/Core/Banshee.Services/Banshee.ServiceStack/ServiceManager.cs: Load
	addin services into the service manager; moved the Mono.Addins init stuff
	to ServiceManager directly
